--- a/config/database.yml
+++ b/config/database.yml
@@ -23,13 +23,13 @@ default: &default
 
 development:
   <<: *default
-  database: rails_7_0_4_api_boiler_plate_development
+  database: market_place_back_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: rails_7_0_4_api_boiler_plate
+  #username: market_place_back
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: rails_7_0_4_api_boiler_plate_test
+  database: market_place_back_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,6 +81,6 @@ test:
 #
 production:
   <<: *default
-  database: rails_7_0_4_api_boiler_plate_production
-  username: rails_7_0_4_api_boiler_plate
-  password: <%= ENV["RAILS_7_0_4_API_BOILER_PLATE_DATABASE_PASSWORD"] %>
+  database: market_place_back_production
+  username: market_place_back
+  password: <%= ENV["market_place_back_DATABASE_PASSWORD"] %>
